grammar.js
    document: $ => seq(
      optional($.front_matter),
      repeat($._node),
    ),

    // Statamic templates may begin with YAML front matter. Keeping the YAML
    // payload as a named node lets editors inject their native YAML grammar.
    front_matter: $ => seq(
      field('open', alias($._front_matter_delimiter, $.front_matter_delimiter)),
      $._newline,
      optional(field('content', $.front_matter_content)),
      field('close', alias($._front_matter_delimiter, $.front_matter_delimiter)),
      optional($._newline),
    ),

    _front_matter_delimiter: _ => token('---'),
    _newline: _ => /\r?\n/,

    // Parse whole lines so a value containing `---` does not terminate the
    // block. The lower token precedence lets a delimiter at the beginning of
    // a line win over an otherwise valid YAML content line.
    front_matter_content: $ => repeat1(seq(
      optional($._front_matter_line),
      $._newline,
    )),

    _front_matter_line: _ => token(prec(-1, /[^\r\n]+/)),

    _node: $ => choice(
      $.escaped_antlers,
      $.escaped_directive,
      $.comment,
      $.php_statement,
      $.php_echo,
      $.noparse,
      $.conditional,
      $.tag_pair,
      $.antlers_tag,
      $.antlers_directive,
      $.text,
    ),

    // Conditions are structural so editors can indent, outline, fold, and
    // navigate the complete block. If a condition is incomplete, the generic
    // antlers_tag rule below remains available as a resilient fallback.
    conditional: $ => choice(
      $._if_conditional,
      $._unless_conditional,
      $._incomplete_if_conditional,
      $._incomplete_unless_conditional,
    ),

    _if_conditional: $ => prec.dynamic(2, seq(
      field('open', alias($._if_open, $.antlers_tag)),
      optional(field('body', $.conditional_body)),
      repeat(seq(
        field('branch', alias($._elseif_tag, $.antlers_tag)),
        optional(field('body', $.conditional_body)),
      )),
      optional(seq(
        field('branch', alias($._else_tag, $.antlers_tag)),
        optional(field('body', $.conditional_body)),
      )),
      field('close', alias($._if_close, $.antlers_tag)),
    )),

    _unless_conditional: $ => prec.dynamic(2, seq(
      field('open', alias($._unless_open, $.antlers_tag)),
      optional(field('body', $.conditional_body)),
      repeat(seq(
        field('branch', alias($._elseunless_tag, $.antlers_tag)),
        optional(field('body', $.conditional_body)),
      )),
      optional(seq(
        field('branch', alias($._else_tag, $.antlers_tag)),
        optional(field('body', $.conditional_body)),
      )),
      field('close', alias($._unless_close, $.antlers_tag)),
    )),

    _incomplete_if_conditional: $ => prec.dynamic(-2, prec.right(seq(
      field('open', alias($._if_open, $.antlers_tag)),
      optional(field('body', alias($._incomplete_conditional_body, $.conditional_body))),
      repeat(seq(
        field('branch', alias($._elseif_tag, $.antlers_tag)),
        optional(field('body', alias($._incomplete_conditional_body, $.conditional_body))),
      )),
      optional(seq(
        field('branch', alias($._else_tag, $.antlers_tag)),
        optional(field('body', alias($._incomplete_conditional_body, $.conditional_body))),
      )),
    ))),

    _incomplete_unless_conditional: $ => prec.dynamic(-2, prec.right(seq(
      field('open', alias($._unless_open, $.antlers_tag)),
      optional(field('body', alias($._incomplete_conditional_body, $.conditional_body))),
      repeat(seq(
        field('branch', alias($._elseunless_tag, $.antlers_tag)),
        optional(field('body', alias($._incomplete_conditional_body, $.conditional_body))),
      )),
      optional(seq(
        field('branch', alias($._else_tag, $.antlers_tag)),
        optional(field('body', alias($._incomplete_conditional_body, $.conditional_body))),
      )),
    ))),

    conditional_body: $ => prec.left(repeat1($._node)),
    noparse: $ => choice(
      prec.dynamic(3, seq(
        field('open', alias($._noparse_open, $.antlers_tag)),
        optional(field('body', $.noparse_content)),
        field('close', alias($._noparse_close, $.antlers_tag)),
      )),
      // Keep an unfinished region opaque through end-of-file. This mirrors
      // Antlers' parser and avoids a flash of executable highlighting while
      // the closing tag is still being typed.
      prec.dynamic(-1, prec.right(seq(
        field('open', alias($._noparse_open, $.antlers_tag)),
        optional(field('body', $.noparse_content)),
      ))),
    ),

    _noparse_open: $ => seq(
      alias($._noparse_open_delimiter, '{{'),
      optional($._whitespace),
      field('body', alias($._noparse_body, $.tag_body)),
      '}}',
    ),

    _noparse_close: $ => seq(
      alias($._noparse_close_delimiter, '{{'),
      optional($._whitespace),
      field('closing', $.closing_marker),
      optional($._whitespace),
      field('body', alias($._noparse_close_body, $.tag_body)),
      optional($._whitespace),
      '}}',
    ),

    tag_pair: $ => prec.dynamic(1, seq(
      field('open', alias($._tag_pair_open, $.antlers_tag)),
      optional(field('body', $.tag_pair_body)),
      field('close', alias($._tag_pair_close, $.antlers_tag)),
    )),

    tag_pair_body: $ => repeat1($._node),

    _tag_pair_open: $ => seq(
      alias($._tag_pair_open_delimiter, '{{'),
      optional($._whitespace),
      field('body', $.tag_body),
      '}}',
    ),

    _tag_pair_close: $ => seq(
      alias($._tag_pair_close_delimiter, '{{'),
      optional($._whitespace),
      field('closing', $.closing_marker),
      optional($._whitespace),
      field('body', $.tag_body),
      '}}',
    ),

    // Consumers can combine these ranges and reparse them with a host grammar.
    text: _ => token(prec(-1, choice(
      repeat1(choice(
        /[^{}@<]+/,
        /<[^?]/,
      )),
      '<',
      '@',
      '{',
      /}+/,
    ))),

    // A leading @ escapes an Antlers region and must remain literal template
    // text instead of being parsed and highlighted as an executable tag.
    escaped_antlers: _ => token(seq(
      '@{{',
      repeat(choice(
        /[^}]+/,
        /}[^}]/,
      )),
      '}}',
    )),

    // Component directives live outside `{{ ... }}`. Props and aware always
    // require arguments, while cascade can be used as a bare directive. A
    // doubled at-sign is Statamic's literal escape and must never expose the
    // following name as an executable directive.
    antlers_directive: $ => choice(
      seq(
        field('name', alias($._directive_name_with_arguments, $.directive_name)),
        optional($._whitespace),
        field('arguments', $.group),
      ),
      field('name', alias($._bare_cascade_name, $.directive_name)),
    ),

    escaped_directive: _ => token(prec(5, choice(
      '@@props',
      '@@aware',
      '@@cascade',
    ))),

    // Keep an unfinished comment opaque through end-of-file. The recovery
    // token cannot cross a real `#}}`: it may consume only a trailing `#` or
    // `#}` fragment, so the longer completed-comment token always wins when
    // the closing delimiter exists.
    comment: _ => choice(
      token(prec(2, seq(
        '{{#',
        repeat(choice(
          /[^#]+/,
          /#[^}]/,
          /#}[^}]/,
        )),
        '#}}',
      ))),
      token(prec(-1, seq(
        '{{#',
        repeat(choice(
          /[^#]+/,
          /#[^}]/,
          /#}[^}]/,
        )),
        optional(choice('#}', '#')),
      ))),
    ),

    php_statement: $ => choice(
      seq(
        '{{?',
        optional(alias($._php_statement_code, $.php_code)),
        '?}}',
      ),
      prec.dynamic(2, seq(
        '<?php',
        optional(alias($._native_php_code, $.php_code)),
        '?>',
      )),
      // Keep native PHP highlighted while its close tag is still being typed.
      prec.dynamic(-2, prec.right(seq(
        '<?php',
        alias($._native_php_code, $.php_code),
      ))),
    ),

    _php_statement_code: _ => token(repeat1(choice(
      /[^?]+/,
      /\?[^}]/,
      /\?}[^}]/,
    ))),

    php_echo: $ => choice(
      seq(
        '{{$',
        optional(alias($._php_echo_code, $.php_code)),
        '$}}',
      ),
      prec.dynamic(2, seq(
        '<?=',
        optional(alias($._native_php_code, $.php_code)),
        '?>',
      )),
      prec.dynamic(-2, prec.right(seq(
        '<?=',
        alias($._native_php_code, $.php_code),
      ))),
    ),

    _php_echo_code: _ => token(repeat1(choice(
      /[^$]+/,
      /\$[^}]/,
      /\$}[^}]/,
    ))),

    _native_php_code: _ => token(repeat1(choice(
      /[^?]+/,
      /\?[^>]/,
    ))),

    antlers_tag: $ => choice(
      prec.dynamic(-1, seq(
        '{{',
        antlersTagContent($),
        choice(
          field('self_closing', $.self_closing_end),
          '}}',
        ),
      )),
      // Preserve the tag body while `}}` is still being typed instead of
      // asking Tree-sitter's error recovery to synthesize a zero-width close.
      // Specialized comments, PHP regions, conditionals, and pairs retain
      // higher-precedence complete or dedicated recovery rules.
      prec.dynamic(-3, prec.right(seq(
        '{{',
        antlersTagContent($),
        choice(
          $._tag_recovery_boundary,
          $._end_of_file,
        ),
      ))),
    ),

    closing_marker: _ => prec(1, '/'),
    self_closing_end: _ => '/}}',

    tag_body: $ => choice(
      seq(
        $.recursive_reference,
        optional($._whitespace),
      ),
      seq(
        field('head', choice(
          $.explicit_tag,
          $.dynamic_tag_name,
          $._head_component,
        )),
        repeat(choice(
          $.shorthand_parameter,
          $.parameter,
          $.modifier,
          $._tag_component,
        )),
      ),
    ),

    // Recursive tags re-enter the nearest recursive pair and are distinct
    // from multiplication expressions. Antlers requires the leading marker
    // to touch `recursive` or `subrecursive`; the target itself may be a
    // compound path, a bracket accessor, or the special array-like form used
    // by nested recursion.
    recursive_reference: $ => prec.dynamic(4, seq(
      field('open', $.recursive_marker),
      field('kind', $.recursive_kind),
      optional($._whitespace),
      field('target', choice(
        $.subscript_expression,
        $.path,
        $.array,
      )),
      optional($._whitespace),
      field('close', $.recursive_marker),
    )),

    recursive_marker: _ => '*',

    recursive_kind: _ => token(prec(4, choice(
      'subrecursive',
      'recursive',
    ))),

    // Parameters deliberately remain separate from general assignment
    // expressions. They can only occur after the tag head and must have a
    // name before the equals sign, which preserves `{{ total = 0 }}` as an
    // expression while grouping `{{ collection from="blog" }}` structurally.
    parameter: $ => choice(
      seq(
        optional(field('prefix', $.parameter_prefix)),
        field('name', $.path),
        optional($._whitespace),
        field('operator', alias('=', $.operator)),
        optional($._whitespace),
        field('value', $._parameter_value),
      ),
      seq(
        field('prefix', $.ignored_parameter_prefix),
        field('name', $.path),
        optional($._whitespace),
        field('operator', alias('=', $.operator)),
        optional($._whitespace),
        field('value', $._ignored_parameter_value),
      ),
    ),

    // A colon enables dynamic binding (`:from="collection"`), while a
    // backslash tells Antlers not to interpolate the parameter value.
    parameter_prefix: _ => ':',

    ignored_parameter_prefix: _ => '\\',

    _ignored_parameter_value: $ => choice(
      $.ignored_string,
      $.number,
      $.boolean,
      $.null,
      $.void,
      $.keyword,
      $.subscript_expression,
      $.path,
    ),

    // `:$name` expands to `:name="name"` inside Statamic. Requiring the
    // dollar sign keeps ordinary ternary `: value` expressions unambiguous.
    shorthand_parameter: _ => token(prec(3, /:\$[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z0-9_]+)*/i)),

    _parameter_value: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.null,
      $.void,
      $.keyword,
      $.method_chain,
      $.subscript_expression,
      $.path,
      $.array,
      $.group,
      $.interpolation,
    ),

    // Modifier calls use a dedicated name token so colon-style legacy
    // arguments do not become part of the modifier name. Parenthesized
    // arguments remain a normal group and retain expression highlighting.
    modifier: $ => prec.right(seq(
      field('operator', alias('|', $.operator)),
      optional($._whitespace),
      field('name', $.modifier_name),
      optional(field('arguments', choice(
        $.group,
        $.legacy_modifier_arguments,
      ))),
    )),

    modifier_name: _ => token(prec(2, MODIFIER_NAME)),

    // Antlers' original modifier syntax separates raw arguments with colons.
    // A separator must touch the modifier name or previous value, which keeps
    // `value | modifier : fallback` available to the ternary expression.
    legacy_modifier_arguments: $ => prec.right(repeat1($.legacy_modifier_argument)),

    legacy_modifier_argument: $ => prec.right(seq(
      field('separator', alias(':', $.punctuation)),
      optional($._whitespace),
      field('value', choice(
        $.string,
        $.number,
        $.boolean,
        $.null,
        $.void,
        $.array,
        $.group,
        $.interpolation,
        $.legacy_modifier_value,
      )),
    )),

    // Raw legacy values continue until the next argument, modifier, template
    // delimiter, or symbolic expression operator. Quotes and interpolations
    // are excluded so their normal structured rules can handle embedded `:`
    // and `|` characters without terminating the argument.
    legacy_modifier_value: _ => token(prec(1, /[^:|"'{}\[\]()&!?=<>\s](?:[^:|"'{}\[\]()&!?=<>]*[^:|"'{}\[\]()&!?=<>\s])?/)),

    // Antlers supports method calls through PHP-style arrows as well as dot
    // and colon accessors. The external receiver token looks ahead only far
    // enough to confirm an accessor, method name, and opening parenthesis;
    // ordinary compound paths therefore keep their established path node.
    method_chain: $ => prec.dynamic(3, prec.left(seq(
      field('receiver', alias($._method_receiver, $.path)),
      repeat1(field('method', $.method_invocation)),
    ))),

    method_invocation: $ => prec.left(4, seq(
      field('accessor', alias($._method_accessor, $.operator)),
      field('name', $.method_name),
      field('arguments', $.group),
    )),

    method_name: _ => token(MODIFIER_NAME),

    _tag_component: $ => choice(
      $._head_component,
      $._whitespace,
    ),

    _head_component: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.null,
      $.void,
      $.keyword,
      $.method_chain,
      $.subscript_expression,
      $.path,
      $.operator,
      $.punctuation,
      $.array,
      $.group,
      $.interpolation,
    ),

    _whitespace: _ => /\s+/,

    // Bracket notation accesses a value by literal or dynamic key. Modeling
    // the base and its indexes together keeps `items[field]` distinct from an
    // adjacent array literal while supporting arbitrarily chained access.
    subscript_expression: $ => prec.dynamic(2, prec.right(seq(
      field('value', $.path),
      repeat1(field('index', $.subscript)),
    ))),

    subscript: $ => seq(
      '[',
      repeat(choice(
        $.string,
        $.number,
        $.boolean,
        $.null,
        $.void,
        $.path,
        $.operator,
        $.punctuation,
        $._whitespace,
        $.array,
        $.group,
        $.interpolation,
        $.subscript_expression,
        $.method_chain,
        $.modifier,
      )),
      ']',
    ),
