test/corpus/tags.txt
==================
Variables and modifiers
==================

<h1>{{ title | upper }}</h1>
{{ meta_title ?? title ?? "No title" }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)
      (modifier
        (operator)
        (modifier_name))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)
      (operator)
      (string
        (string_content))))
  (text))

==================
Case-insensitive logical keywords and constants
==================

{{ TrUe AND FALSE oR something }}
{{ NULL ?? fallback }}
{{ tuple = LiSt(name, color; 'Taylor', 'blue') }}
{{ true_value ANDromeda ORBIT null_value list_items }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)
      (path)
      (path)
      (path)
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)
      (group
        (path)
        (punctuation)
        (path)
        (punctuation)
        (string
          (string_content))
        (punctuation)
        (string
          (string_content)))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (path)
      (path)
      (path)
      (path)))
  (text))

==================
Named arguments and ternary controls
==================

{{ choice = choose(primary: title, fallback: wrapper(value)) }}
{{ result = service->render(template: 'card', data: payload) }}
{{ ternary_control = (condition ? yes : no) }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)
      (group
        (path)
        (operator)
        (path)
        (punctuation)
        (path)
        (operator)
        (path)
        (group
          (path)))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group
            (path)
            (operator)
            (string
              (string_content))
            (punctuation)
            (path)
            (operator)
            (path))))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (group
        (path)
        (operator)
        (path)
        (operator)
        (path))))
  (text))

==================
Incomplete comments remain opaque
==================

<p>Content before.</p>
{{# Work in progress.
{{ should_stay_opaque | upper }}

---

(document
  (text)
  (comment))

==================
Incomplete comment with hash terminator fragment
==================

{{# Work in progress. #

---

(document
  (text)
  (comment))

==================
Incomplete comment with hash-brace terminator fragment
==================

{{# Work in progress. #}

---

(document
  (text)
  (comment))

==================
Incomplete ordinary tag recovery
==================

<p>Content before.</p>
{{ title | upper

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)
      (modifier
        (operator)
        (modifier_name)))))

==================
Incomplete closing tag recovery
==================

{{ /collection:articles

---

(document
  (text)
  (antlers_tag
    (closing_marker)
    (tag_body
      (path))))

==================
Incomplete closing tag recovers before following tag
==================

{{ collection:articles }}
    <p>Content before an unfinished closing tag.</p>
{{ /collection:articles

{{ collection:next }}
    <p>{{ title }}</p>
{{ /collection:next }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)))
  (text)
  (antlers_tag
    (closing_marker)
    (tag_body
      (path)))
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (path)))
    (tag_pair_body
      (text)
      (antlers_tag
        (tag_body
          (path)))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (path))))
  (text))

==================
Component directives and escapes
==================

@props(['title', 'count' => 0])
@aware (['theme' => theme])
@props
(
  ['multiline']
)
@cascade
@cascade(['layout' => layout])
@@props
@props

---

(document
  (text)
  (antlers_directive
    (directive_name)
    (group
      (array
        (string
          (string_content))
        (string
          (string_content))
        (operator)
        (number))))
  (text)
  (antlers_directive
    (directive_name)
    (group
      (array
        (string
          (string_content))
        (operator)
        (path))))
  (text)
  (antlers_directive
    (directive_name)
    (group
      (array
        (string
          (string_content)))))
  (text)
  (antlers_directive
    (directive_name))
  (text)
  (antlers_directive
    (directive_name)
    (group
      (array
        (string
          (string_content))
        (operator)
        (path))))
  (text)
  (escaped_directive)
  (text)
  (text)
  (text))

==================
Recursive and subrecursive references
==================

{{ nav }}
  {{ *recursive children* }}
{{ /nav }}
{{ colors }}
  {{ *subrecursive colors* }}
{{ /colors }}
{{ *subrecursive [primary, secondary]* }}
{{ total = left * recursive * right }}
{{ * recursive * }}

---

(document
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (path)))
    (tag_pair_body
      (text)
      (antlers_tag
        (tag_body
          (recursive_reference
            (recursive_marker)
            (recursive_kind)
            (path)
            (recursive_marker))))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (path))))
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (path)))
    (tag_pair_body
      (text)
      (antlers_tag
        (tag_body
          (recursive_reference
            (recursive_marker)
            (recursive_kind)
            (path)
            (recursive_marker))))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (path))))
  (text)
  (antlers_tag
    (tag_body
      (recursive_reference
        (recursive_marker)
        (recursive_kind)
        (array
          (path)
          (path))
        (recursive_marker))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)
      (operator)
      (path)
      (operator)
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (operator)
      (path)
      (operator)))
  (text))

==================
Explicit tag and variable disambiguation
==================

{{ %collection:blog limit="1" }}
  {{ $strict_variable }}
  {{ $$explicit_variable }}
{{ /%collection:blog }}
{{ remainder = total % divisor }}

---

(document
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (explicit_tag)
        (parameter
          (path)
          (operator)
          (string
            (string_content)))))
    (tag_pair_body
      (text)
      (antlers_tag
        (tag_body
          (path)))
      (text)
      (antlers_tag
        (tag_body
          (path)))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (explicit_tag))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)
      (operator)
      (path)))
  (text))

==================
Arbitrary and nested tag pairs
==================

{{ collection:articles from="blog" }}
  <article>
    {{ items }}
      {{ title }}
    {{ /items }}
  </article>
{{ /collection:articles }}

---

(document
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (path)
        (parameter
          (path)
          (operator)
          (string
            (string_content)))))
    (tag_pair_body
      (text)
      (tag_pair
        (antlers_tag
          (tag_body
            (path)))
        (tag_pair_body
          (text)
          (antlers_tag
            (tag_body
              (path)))
          (text))
        (antlers_tag
          (closing_marker)
          (tag_body
            (path))))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (path))))
  (text))

==================
Dynamic compound tag names
==================

{{ collection:{thing} }}
  {{ title }}
{{ /collection:{thing} }}

{{ collection:{thing} }}
{{ /collection:{other} }}

{{ assets:0 }}
{{ assets:0:0 }}
{{ assets:0:0:test }}

---

(document
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (dynamic_tag_name
          (path)
          (punctuation)
          (punctuation)
          (path)
          (punctuation))))
    (tag_pair_body
      (text)
      (antlers_tag
        (tag_body
          (path)))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (dynamic_tag_name
          (path)
          (punctuation)
          (punctuation)
          (path)
          (punctuation)))))
  (text)
  (antlers_tag
    (tag_body
      (dynamic_tag_name
        (path)
        (punctuation)
        (punctuation)
        (path)
        (punctuation))))
  (text)
  (antlers_tag
    (closing_marker)
    (tag_body
      (dynamic_tag_name
        (path)
        (punctuation)
        (punctuation)
        (path)
        (punctuation))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (number)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (number)
      (operator)
      (number)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (number)
      (operator)
      (number)
      (operator)
      (path)))
  (text))

==================
Nested same-name pairs
==================

{{ scope }}
  {{ scope }}{{ value }}{{ /scope }}
{{ /scope }}

---

(document
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (path)))
    (tag_pair_body
      (text)
      (tag_pair
        (antlers_tag
          (tag_body
            (path)))
        (tag_pair_body
          (antlers_tag
            (tag_body
              (path))))
        (antlers_tag
          (closing_marker)
          (tag_body
            (path))))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (path))))
  (text))

==================
Pair lookalikes in strings, comments, and escaped Antlers
==================

{{ wrapper }}
  {{ value source="{{ /wrapper }}" }}
  {{# {{ /wrapper }} #}}
  @{{ /wrapper }}
{{ /wrapper }}

---

(document
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (path)))
    (tag_pair_body
      (text)
      (antlers_tag
        (tag_body
          (path)
          (parameter
            (path)
            (operator)
            (string
              (antlers_tag
                (closing_marker)
                (tag_body
                  (path)))))))
      (text)
      (comment)
      (text)
      (escaped_antlers)
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (path))))
  (text))

==================
Unmatched and mismatched tags remain resilient
==================

{{ title }}
{{ collection }}
  body
{{ /wrong }}
{{ card /}}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)))
  (text)
  (antlers_tag
    (closing_marker)
    (tag_body
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path))
    (self_closing_end))
  (text))

==================
Tag parameters and pair markers
==================

{{ collection:articles from="blog" :limit="page_size" status:in="published|draft" }}
  {{ title }}
{{ /collection:articles }}
{{ partial:navigation/tabs theme="dark" /}}

---

(document
  (text)
  (tag_pair
    (antlers_tag
      (tag_body
        (path)
        (parameter
          (path)
          (operator)
          (string
            (string_content)))
        (parameter
          (parameter_prefix)
          (path)
          (operator)
          (string
            (string_content)))
        (parameter
          (path)
          (operator)
          (string
            (string_content)))))
    (tag_pair_body
      (text)
      (antlers_tag
        (tag_body
          (path)))
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (path))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (parameter
        (path)
        (operator)
        (string
          (string_content))))
    (self_closing_end))
  (text))

==================
Conditionals and expressions
==================

{{ if logged_in && (role == 'admin' || role == 'editor') }}
{{ elseif score >= 10 }}
{{ else }}
{{ /if }}

---

(document
  (text)
  (conditional
    (antlers_tag
      (tag_body
        (keyword)
        (path)
        (operator)
        (group
          (path)
          (operator)
          (string
            (string_content))
          (operator)
          (path)
          (operator)
          (string
            (string_content)))))
    (conditional_body
      (text))
    (antlers_tag
      (tag_body
        (keyword)
        (path)
        (operator)
        (number)))
    (conditional_body
      (text))
    (antlers_tag
      (tag_body
        (keyword)))
    (conditional_body
      (text))
    (antlers_tag
      (closing_marker)
      (tag_body
        (keyword))))
  (text))

==================
Comments and PHP regions
==================

{{# A comment containing {{ title }}. #}}
{{? $value = route('home'); ?}}
{{$ $value ?? 'fallback' $}}

---

(document
  (text)
  (comment)
  (text)
  (php_statement
    (php_code))
  (text)
  (php_echo
    (php_code))
  (text))

==================
Nested and legacy conditional blocks
==================

{{ if outer }}
  {{ unless inner }}
  {{ elseunless preview }}
  {{ else }}
  {{ /unless }}
{{ endif }}

---

(document
  (text)
  (conditional
    (antlers_tag
      (tag_body
        (keyword)
        (path)))
    (conditional_body
      (text)
      (conditional
        (antlers_tag
          (tag_body
            (keyword)
            (path)))
        (conditional_body
          (text))
        (antlers_tag
          (tag_body
            (keyword)
            (path)))
        (conditional_body
          (text))
        (antlers_tag
          (tag_body
            (keyword)))
        (conditional_body
          (text))
        (antlers_tag
          (closing_marker)
          (tag_body
            (keyword))))
      (text))
    (antlers_tag
      (tag_body
        (keyword))))
  (text))

==================
Incomplete conditional recovery
==================

{{ unless maintenance_mode }}
  <main>{{ slot }}</main>

---

(document
  (text)
  (conditional
    (antlers_tag
      (tag_body
        (keyword)
        (path)))
    (conditional_body
      (text)
      (antlers_tag
        (tag_body
          (path)))
      (text))))

==================
Conditional keyword lookalikes remain ordinary tags
==================

{{ iffy }}
{{ if:related }}
{{ unless-this }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)))
  (text))

==================
Methods, arrays, and assignments
==================

{{ view:test[hello] | upper:test:param:"hello :|" | lower }}
{{ datetime:parse("October 12, 2001"):addDays(10):toAtomString() }}
{{ $title->length() }}
{{ slot->hasActualContent()->trim() }}
{{ slot.hasActualContent() }}
{{ instance->join(['one', 'two', ['three']]) }}
{{ instance:join(['one', 'two']) }}
{{ attributes.merge(['class' => 'hello']).merge(['class' => 'another']) }}
{{ values = ['a' => ['b' => [true, false, null]]] }}
{{ posts[1].title }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (subscript_expression
        (path)
        (subscript
          (path)))
      (modifier
        (operator)
        (modifier_name)
        (legacy_modifier_arguments
          (legacy_modifier_argument
            (punctuation)
            (legacy_modifier_value))
          (legacy_modifier_argument
            (punctuation)
            (legacy_modifier_value))
          (legacy_modifier_argument
            (punctuation)
            (string
              (string_content)))))
      (modifier
        (operator)
        (modifier_name))))
  (text)
  (antlers_tag
    (tag_body
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group
            (string
              (string_content))))
        (method_invocation
          (operator)
          (method_name)
          (group
            (number)))
        (method_invocation
          (operator)
          (method_name)
          (group)))))
  (text)
  (antlers_tag
    (tag_body
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group)))))
  (text)
  (antlers_tag
    (tag_body
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group))
        (method_invocation
          (operator)
          (method_name)
          (group)))))
  (text)
  (antlers_tag
    (tag_body
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group)))))
  (text)
  (antlers_tag
    (tag_body
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group
            (array
              (string
                (string_content))
              (string
                (string_content))
              (array
                (string
                  (string_content)))))))))
  (text)
  (antlers_tag
    (tag_body
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group
            (array
              (string
                (string_content))
              (string
                (string_content))))))))
  (text)
  (antlers_tag
    (tag_body
      (method_chain
        (path)
        (method_invocation
          (operator)
          (method_name)
          (group
            (array
              (string
                (string_content))
              (operator)
              (string
                (string_content)))))
        (method_invocation
          (operator)
          (method_name)
          (group
            (array
              (string
                (string_content))
              (operator)
              (string
                (string_content))))))))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (array
        (string
          (string_content))
        (operator)
        (array
          (string
            (string_content))
          (operator)
          (array
            (boolean)
            (boolean)
            (null))))))
  (text)
  (antlers_tag
    (tag_body
      (subscript_expression
        (path)
        (subscript
          (number)))
      (operator)
      (path)))
  (text))

==================
YAML front matter
==================
---
title: Example
description: "A value containing --- remains YAML"
features:
  - antlers
---
<h1>{{ title }}</h1>

------

(document
  (front_matter
    (front_matter_delimiter)
    (front_matter_content)
    (front_matter_delimiter))
  (text)
  (antlers_tag
    (tag_body
      (path)))
  (text))

==================
Escaped Antlers and string braces
==================

@{{ escaped }}
{{ value = "hello@{world@}" }}

---

(document
  (text)
  (escaped_antlers)
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (string
        (string_content)
        (escaped_brace)
        (string_content)
        (escaped_brace))))
  (text))

==================
Nested interpolation in parameter strings
==================

{{ partial:x parameter="{{ value }}" interpolation="{title}" /}}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)
      (parameter
        (path)
        (operator)
        (string
          (antlers_tag
            (tag_body
              (path)))))
      (parameter
        (path)
        (operator)
        (string
          (interpolation
            (tag_body
              (path))))))
    (self_closing_end))
  (text))

==================
Multiline nested tags do not trigger recovery
==================

{{ partial:test title="
{{ title }}
" }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)
      (parameter
        (path)
        (operator)
        (string
          (string_content)
          (antlers_tag
            (tag_body
              (path)))
          (string_content)))))
  (text))

==================
Fallback, ternary, and concatenation operators
==================

{{ result = value ??? fallback }}
{{ result ? yes : no }}
{{ message &= suffix }}
{{ fallback ?= default_value }}
{{ compact ?: fallback }}

---

(document
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)
      (operator)
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)
      (operator)
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)))
  (text)
  (antlers_tag
    (tag_body
      (path)
      (operator)
      (path)))
  (text))

==================
Documented parameter and modifier forms
==================

{{ collection:blog limit="5" :from="source" :$class \x-data="{ submittable: false }" }}
{{ form \x-data="{ open: false, title: '{{ title }}' }" \data-json='{"key":"{value}"}' }}
{{ title | upper | ensure_right('!') }}
{{ result ? yes : no }}

---
